Fixed a *lot* of bugs and updated stuff.